syntax = "proto3";

option go_package = "pb/store";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service Store {	
	rpc NewTx (NewTxRequest) returns (NewTxResponse){};
	rpc Commit (google.protobuf.Empty) returns (CommitResponse){};
	rpc Rollback (google.protobuf.Empty) returns (google.protobuf.Empty){};
}

message NewTxRequest {
}

message NewTxResponse {
	string transactionID = 1;
}

message CommitResponse {
	uint32 updatedRows = 1;
}